# l6e

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  data.json  mypy.ini  pyproject.toml
.github/workflows/: publish-l6e.yml  pytest.yml
.l6e/: runs.jsonl
examples/: langchain_demo copy.ipynb  langchain_demo.ipynb
examples/.l6e/: runs.jsonl
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2172747f8a50ff0c___init___py.html  z_2172747f8a50ff0c__classify_py.html  z_2172747f8a50ff0c__gate_core_py.html  z_2172747f8a50ff0c__log_py.html  z_2172747f8a50ff0c__protocols_py.html  z_2172747f8a50ff0c__response_py.html  z_2172747f8a50ff0c__types_py.html  z_2172747f8a50ff0c_cloud_py.html  z_2172747f8a50ff0c_costs_py.html  z_2172747f8a50ff0c_exceptions_py.html  z_2172747f8a50ff0c_gate_py.html  z_2172747f8a50ff0c_pipeline_py.html  z_2172747f8a50ff0c_router_py.html  z_2172747f8a50ff0c_store_py.html  z_689cdca33b2a00fa_crewai_py.html  z_689cdca33b2a00fa_langchain_py.html  z_689cdca33b2a00fa_universal_py.html
src/l6e/: __init__.py  _classify.py  _gate_core.py  _log.py  _protocols.py  _response.py  _types.py  cloud.py  costs.py  exceptions.py  gate.py  pipeline.py  router.py  store.py
src/l6e.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/l6e/adapters/: __init__.py  crewai.py  langchain.py  universal.py
tests/: conftest.py  test_costs.py
tests/fixtures/: embedding_validation_parity.json  gate_parity_matrix.json  policy.toml
tests/unit/: test_classify.py  test_cloud_gate.py  test_costs.py  test_crewai_adapter.py  test_embedding_parity.py  test_exceptions.py  test_fail_open.py  test_gate.py  test_gate_parity.py  test_langchain_adapter.py  test_log.py  test_pipeline.py  test_response.py  test_router.py  test_store.py  test_types.py  test_universal.py
