[project]
name = "l6e"
version = "0.1.1"
description = "Per-run budget enforcement and model routing for AI agent pipelines."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.0.0",
    "tiktoken>=0.7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "langchain-core>=0.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
python_version = "3.11"
exclude = ["tests/"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"examples/**" = ["E402", "E501"]

[tool.coverage.run]
source = ["src"]
relative_files = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
